[package]
name = "mont_mul_cuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "^0"
num-bigint = "0.4.3"
num-traits = "0.2"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
mockall = "0.10.2"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rayon = "1.5"

[[bench]]
name = "bench"
harness = false